--- a/master/styles/pages/issueArchive.less
+++ b/master/styles/pages/issueArchive.less
@@ -23,11 +23,10 @@
 
  .issues_archive.issues_archive>li {
    padding: .5rem;
+   padding-left: 0;
    margin-bottom: 0;
-   background-color: @bg-shade-light;
-   border: @toc-border;
 }
 
 .issues_archive.issues_archive>li+li{
-   margin-top: 1rem;
+   margin-top: @toc-item-gap;
 }
