--- a/master/styles/variables.less
+++ b/master/styles/variables.less
@@ -98,6 +98,13 @@
 @toc-cover-hover-box-shadow-vignette: 0 0 200px rgba(0,0,0,0.5) inset, 0 0 100px rgba(0,0,0,0.9) inset;
 @toc-image-max-size: 250px;
 
+.master-coversize {
+    width: calc(~"100vw - 1em");
+    height: calc(~"100vw - 1rem");
+    max-height: calc(~"100vw - 1rem");
+    max-width: calc(~"100vw - 1rem");
+}
+
 // Text
 // @text:                   black;
 // @text-light:             rgba(0,0,0,0.54);
